--- a/static/index.html
+++ b/static/index.html
@@ -23,15 +23,14 @@
       </div>
       <div class="fixed-nav-bar-right">
         <a class="navbar-link" href="/./-"><i class="fa-solid fa-gamepad navbar-icon"></i>Games</a>
-        <a class="navbar-link" href="/./~"><span class="material-symbols-outlined weird-icon">apps</span>Apps</a>
-        <a class="navbar-link" href="/./0"><i class="fa-solid fa-table navbar-icon"></i>Tabs</a>
+        <a class="navbar-link" href="/./0"><i class="fa-solid fa-table navbar-icon"></i>Testing URL</a>
         <a class="navbar-link" href="/./!"><i class="fa-solid fa-gear navbar-icon settings-icon"></i>Settings</a>
       </div>
     </div>
     <div id="particles-js">
       <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
       <div class="main">
-        <h1 class="title">Interstellar</h1>
+        <h1 class="title">BL0XXED</h1>
         <div class="search-container">
           <form method="POST">
             <input class="main-search" placeholder="Search with Google or enter address" type="text" />
