--- a/static/index.html
+++ b/static/index.html
@@ -31,7 +31,7 @@
     </div>
     <div id="particles-js">
       <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-      <img alt="test" src="/wallpaper.jpg">
+      <img alt="test" src="/wallpaper.jpg" width="400" height="500">
       <div class="main">
         <h1 class="title">BL0XXED</h1>
         <div class="search-container">
