--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
         <h1 class="title">BL0XXED</h1>
         <div class="search-container">
           <form method="POST">
-            <input class="main-search" placeholder="Search with Google or enter address" type="text" />
+            <input class="main-search" placeholder="Search" type="text" />
           </form>
         </div>
       </div>
