--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,6 @@
     <script src="https://kit.fontawesome.com/1237c86ba0.js" crossorigin="anonymous"></script>
   </head>
   <body>
-
-        <a class="icon" href="/./"><img alt="nav" id="INImg" src="main.png" /></a>
       </div>
       <div class="fixed-nav-bar-right">
         <a class="navbar-link" href="/./-"><i class="fa-solid fa-gamepad navbar-icon"></i>Games</a>
@@ -32,6 +30,7 @@
         <div class="search-container">
           <form method="POST">
             <input class="main-search" placeholder="Search" type="text" />
+        <p class="linkp"><a href="settings.html">Settings</a> • <a href="/">Restart the Website</a></p>
           </form>
         </div>
       </div>
