--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
         <div class="search-container">
           <form method="POST">
             <input class="main-search" placeholder="Search" type="text" />
-        <p class="linkp"><a href="settings.html">Settings</a> • <a href="/">Restart the Website</a></p>
+        <p class="linkp"><a href="settings.html" color:white;>        Settings</a> • <a href="/">G A M E S</a></p>
           </form>
         </div>
       </div>
