--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,8 @@
         <div class="search-container">
           <form method="POST">
             <input class="main-search" placeholder="Search" type="text" />
-        <p class="linkp"><a href="settings.html" color:white;>        Settings</a> • <a href="/">G A M E S</a></p>
+         <a href="settings.html" target="_blank" style="text-decoration: none;color:white;">Settings</p>
+          <a href="Games.html" target="_blank" style="text-decoration: none;color:white;">Games</p>
           </form>
         </div>
       </div>
