--- a/static/index.html
+++ b/static/index.html
@@ -26,12 +26,15 @@
     <div id="particles-js">
       <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
       <div class="main">
-        <h1 class="title">BL0XXED</h1>
+        <h1 class="title">🚀BL0XXED🚀</h1>
         <div class="search-container">
           <form method="POST">
             <input class="main-search" placeholder="Search" type="text" />
-         <a href="settings.html" target="_blank" style="text-decoration: none;color:white;">Settings</p>
-          <a href="Games.html" target="_blank" style="text-decoration: none;color:white;">Games</p>
+        <br>
+            <br>
+            <a href="settings.html" target="_blank" style="text-decoration: none;color:white;">⚙Settings⚙</p>
+              <br>
+          <a href="Games.html" target="_blank" style="text-decoration: none;color:white;">🕹️Games🕹️</p>
           </form>
         </div>
       </div>
