--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,9 @@
     <div id="particles-js">
       <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
       <div class="main">
+          <div class="zoom-container">
+
+</body>
         <h1 class="title">🚀BL0XXED🚀</h1>
         <div class="search-container">
           <form method="POST">
@@ -34,6 +37,8 @@
               <br>
           <a href="Games.html" target="_blank" style="text-decoration: none;color:white;">🕹️Games🕹️</p>
           </form>
+          </div>
+  <script src="script.js"></script>
         </div>
       </div>
       <div class="footer">
