--- a/static/index.html
+++ b/static/index.html
@@ -11,9 +11,8 @@
     <link rel="stylesheet" href="/assets/styles/main.css" />
     <link rel="stylesheet" href="/assets/styles/home.css" />
     <link rel="stylesheet" href="/styles/theme/catppuccin/latte.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="zoomstyle.css">
     <script src="https://kit.fontawesome.com/1237c86ba0.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -25,8 +24,6 @@
       <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
       <div class="main">
           <div class="zoom-container">
-
-</body>
         <h1 class="title">🚀BL0XXED🚀</h1>
         <div class="search-container">
           <form method="POST">
