--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
     <title id="dynamic-title">Home</title>
     <link rel="stylesheet" href="/assets/styles/main.css" />
     <link rel="stylesheet" href="/assets/styles/home.css" />
-    <link rel="stylesheet" href="/styles/theme/catppuccin/latte.css" />
+    <link rel="stylesheet" href="static/assets/styles/theme/catppuccin/frappe.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://kit.fontawesome.com/1237c86ba0.js" crossorigin="anonymous"></script>
   </head>
@@ -30,7 +30,7 @@
             <br>
             <a href="settings.html" target="_blank" style="text-decoration: none;color:white;">⚙Settings⚙</p>
               <br>
-          <a href="Games.html" target="_blank" style="text-decoration: none;color:white;">🕹️Games🕹️</p>
+          <a href="games.html" target="_blank" style="text-decoration: none;color:white;">🕹️Games🕹️</p>
           </form>
           </div>
         </div>
