--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/assets/styles/home.css" />
     <link rel="stylesheet" href="/assets/styles/theme/catppuccin/frappe.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="galactic.css">
     <script src="https://kit.fontawesome.com/1237c86ba0.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -19,6 +20,7 @@
       <div class="fixed-nav-bar-right">
       </div>
     </div>
+    <div class="particles"></div>
     <div id="particles-js">
       <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
       <div class="main">
