--- a/static/index.html
+++ b/static/index.html
@@ -20,9 +20,10 @@
       <div class="fixed-nav-bar-right">
       </div>
     </div>
-    <div class="particles"></div>
-    <div id="particles-js">
+     <div id="particles-js">
       <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <div class="space">
+    <div class="stars"></div>
       <div class="main">
         <h1 class="title">🚀BL0XXED🚀</h1>
         <div class="search-container">
