--- a/static/settings.html
+++ b/static/settings.html
@@ -19,15 +19,10 @@
   </head>
   <body>
     <div class="fixed-nav-bar">
-      <a class="icon" href="/./"><img alt="nav" id="INImg" src="main.png" /></a>
-      <div class="fixed-nav-bar-right">
-        <a class="navbar-link" href="/./-"><i class="fa-solid fa-gamepad navbar-icon"></i>Games</a>
-        <a class="navbar-link" href="/./~"><span class="material-symbols-outlined weird-icon">apps</span>Apps</a>
-        <a class="navbar-link" href="/./0"><i class="fa-solid fa-table navbar-icon"></i>Tabs</a>
-        <a class="navbar-link" href="/./!"><i class="fa-solid fa-gear navbar-icon settings-icon"></i>Settings</a>
       </div>
     </div>
     <div class="main">
+<h1 href="settings.html" target="_blank" style="text-decoration: none;color:white;">Go Back</p>
       <div class="settings-container">
         <div class="settings-card">
           <h3>About:Blank</h3>
@@ -37,81 +32,45 @@
         <div class="settings-card">
           <h3>Set Panic Key</h3>
           <p>
-            Quickly open a educational site, when the teacher comes. The panic link is also used to redirect you when
-            about:blank windows are opened.
+A quick way to redirect you to a link!, like if a teacher comes to your specific computer, you can press your selected key and hide away!
           </p>
           <input type="text" id="eventKeyInput" placeholder="Panic Key" class="key-form" />
           <input class="key-form" placeholder="Panic Link" type="text" id="linkInput" value />
           <button class="key-button" value="Save" onclick="saveEventKey()">Save</button>
         </div>
         <div class="settings-card">
-          <h3>Set Background Image</h3>
+          <h3>Background Image</h3>
           <p>Change the site's background image.</p>
           <input type="text" id="background-input" placeholder="Enter image URL" />
-          <button class="key-button" id="save-button">Save</button>
-          <button class="key-button" id="reset-button">Reset</button>
+          <button class="key-button" id="save-button">Set Background</button>
+          <button class="key-button" id="reset-button">cancel/Reset</button>
         </div>
         <div class="settings-card">
           <h3>Tab Cloaker</h3>
-          <p>Makes the site look educational.</p>
+          <p>Make the header more... educational.</p>
           <select id="dropdown" onchange="handleDropdownChange(this)">
-            <option value="Classroom">Default</option>
-            <option value="Classroom">Google Classroom</option>
+
             <option value="Google">Google</option>
             <option value="Drive">Google Drive</option>
             <option value="Clever">Clever</option>
             <option value="Schoology">Schoology</option>
             <option value="Gmail">Gmail</option>
             <option value="Khan">Khan Academy</option>
-            <option value="Campus">Infinite Campus</option>
-            <option value="IXL">IXL</option>
             <option value="Canvas">Canvas</option>
+            <option value="Classroom">Default</option>
           </select>
           <input class="key-form" type="text" id="icon" placeholder="Change Tab Icon" name="icon" />
           <input class="key-form" type="text" id="name" name="name" placeholder="Change Tab Name" />
           <button class="key-button" value="Save" onclick="saveIcon(); saveName(); redirectToMainDomain()">Save</button>
         </div>
         <div class="settings-card">
-          <h3>Particles</h3>
-          <p>Add the particles from the previous version to the new site.</p>
+          <h3>Winter Mode.</h3>
+          <p>Let it snow!</p>
           <label class="switch">
-            <input type="checkbox" class="slider-checkbox" id="2" />
+            <input type="checkbox" class="slider-checkbox" id="1" />
             <span class="slider-round"></span>
           </label>
         </div>
-        <div class="settings-card">
-          <h3>Themes!</h3>
-          <p>Choose through a selection of themes!</p>
-          <select placeholder="Solid Color Themes" id="dropdown" class="td" onchange="themeChange(this)">
-            <option disabled selected>Solid Color Themes</option>
-            <option value="d">Default</option>
-            <option value="midnight">Dark Mode</option>
-            <option value="light">Light Mode</option>
-            <option value="ocean-blue">Ocean Blue</option>
-            <option disabled selected>Catppuccin Themes</option>
-            <option value="catppuccinMocha">Mocha</option>
-            <option value="catppuccinMacchiato">Macchiato</option>
-            <option value="catppuccinFrappe">Frappe</option>
-            <option value="catppuccinLatte">Latte</option>
-            <option disabled selected>Gradient Themes</option>
-            <option value="black-red">Black Red</option>
-            <option value="black-blue">Black Blue</option>
-            <option value="black-green">Black Green</option>
-            <option value="black-purple">Black Purple</option>
-            <option value="black-coral">Black Coral</option>
-            <option value="black-ruby">Black Ruby</option>
-            <option value="black-orange">Black Orange</option>
-            <option value="black-yellow">Black Yellow</option>
-            <option value="black-pink">Black Pink</option>
-            <option value="black-white">Black White</option>
-            <option value="red">Red</option>
-            <option value="purple">Purple</option>
-            <option value="dark-purple">Dark Purple</option>
-            <option value="purple-blue">Purple Blue</option>
-            <option value="sunset">Sunset</option>
-            <option value="indigo">Indigo</option>
-            <option value="fire-ice">Fire and Ice</option>
-          </select>
         </div>
       </div>
     </div>
