--- a/static/settings.html
+++ b/static/settings.html
@@ -11,17 +11,16 @@
     <script src="/assets/scripts/global.js?v=1"></script>
     <link rel="stylesheet" href="/assets/styles/main.css" />
     <link rel="stylesheet" href="/assets/styles/settings.css" />
-    <link rel="stylesheet" href="/assets/styles/theme/catppuccin/frappe.css" />
+    <link rel="stylesheet" href="/assets/styles/theme/catppuccin/mocha.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="galactic.css">
     <script src="https://kit.fontawesome.com/1237c86ba0.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="fixed-nav-bar">
       </div>
     </div>
     <div class="main">
-<h1 href="settings.html" target="_blank" style="text-decoration: none;color:white;">Go Back</p>
+<a href="settings.html" target="_blank" style="text-decoration: none;color:white;">Go Back</p>
       <div class="settings-container">
         <div class="settings-card">
           <h3>About:Blank</h3>
@@ -66,7 +65,7 @@ A quick way to redirect you to a link!, like if a teacher comes to your specific
           <h3>Winter Mode.</h3>
           <p>Let it snow!</p>
           <label class="switch">
-            <input type="checkbox" class="slider-checkbox" id="1" />
+            <input type="checkbox" class="slider-checkbox" id="2" />
             <span class="slider-round"></span>
           </label>
         </div>
