--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
   <div class="space">
     <div class="stars"></div>
       <div class="main">
-        <h1 class="title">🚀BL0XXED🚀</h1>
+        <h1 class="title">👑BL▢XXED👑</h1>
         <div class="search-container">
           <form method="POST">
             <input class="main-search" placeholder="Search" type="text" />
