--- a/static/settings.html
+++ b/static/settings.html
@@ -20,7 +20,9 @@
       </div>
     </div>
     <div class="main">
-<a href="settings.html" target="_blank" style="text-decoration: none;color:white;">Go Back</p>
+        <div class="space">
+    <div class="stars"></div>
+<a href="/" target="_blank" style="text-decoration: none;color:white;">Go Back</p>
       <div class="settings-container">
         <div class="settings-card">
           <h3>About:Blank</h3>
