--- a/static/settings.html
+++ b/static/settings.html
@@ -19,15 +19,16 @@
   <body>
       </div>
     </div>
-    <div class="main">
-        <div class="space">
+<div class="space">
     <div class="stars"></div>
+    <div class="main">
+
 <a href="/" target="_blank" style="text-decoration: none;color:white;">Go Back</p>
       <div class="settings-container">
         <div class="settings-card">
           <h3>About:Blank</h3>
           <p>Cloak the site in an about:blank page.</p>
-          <button onclick="AB()">Open Popup</button>
+          <button onclick="AB()">Open blanker</button>
         </div>
         <div class="settings-card">
           <h3>Set Panic Key</h3>
