--- a/static/settings.html
+++ b/static/settings.html
@@ -13,17 +13,14 @@
     <link rel="stylesheet" href="/assets/styles/settings.css" />
     <link rel="stylesheet" href="/assets/styles/theme/catppuccin/mocha.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="galactic.css">
     <script src="https://kit.fontawesome.com/1237c86ba0.js" crossorigin="anonymous"></script>
   </head>
   <body>
       </div>
     </div>
-<div class="space">
-    <div class="stars"></div>
     <div class="main">
 
-<a href="/" target="_blank" style="text-decoration: none;color:white;">Go Back</p>
+<a href="/" target="_blank" style="text-decoration: none;color:purple;">Go Back</p>
       <div class="settings-container">
         <div class="settings-card">
           <h3>About:Blank</h3>
