--- a/static/games.html
+++ b/static/games.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/main.css" />
     <link rel="stylesheet" href="/assets/styles/theme/catppuccin/mocha.css" />
+    <link rel="stylesheet" href="galactic.css">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -19,8 +20,11 @@
     <script src="https://kit.fontawesome.com/1237c86ba0.js" crossorigin="anonymous"></script>
     <script src="/assets/scripts/g.js?v=1"></script>
   </head>
+  <div class="space">
+    <div class="stars"></div>
   <body>
     <a href="/" target="_blank" style="text-decoration: none;color:white;">Go Back</p>
+       <h1 class="title">👑BL▢XXED👑</h1>
       </div>
     </div>
     <div class="input-container">
