--- a/static/games.html
+++ b/static/games.html
@@ -24,7 +24,7 @@
     <div class="stars"></div>
   <body>
     <a href="/" target="_blank" style="text-decoration: none;color:white;">Go Back</p>
-       <h1 class="title">👑BL▢XXED👑</h1>
+       <a class="title">👑BL▢XXED👑</a>
       </div>
     </div>
     <div class="input-container">
