--- a/static/games.html
+++ b/static/games.html
@@ -52,5 +52,7 @@
     </script>
     <script src="/assets/scripts/global.js?v=1"></script>
     <script src="/assets/scripts/settings.js"></script>
+        <div class="space">
+    <div class="stars"></div>
   </body>
 </html>
