--- a/static/games.html
+++ b/static/games.html
@@ -22,8 +22,9 @@
   </head>
   <body>
     <div class="space">
+           <div id="particles-js">
+      <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <a href="/" target="_blank" style="text-decoration: none;color:white;">Go Back</p>
-       <a class="title">👑BL▢XXED👑</a>
       </div>
     </div>
     <div class="input-container">
