--- a/static/games.html
+++ b/static/games.html
@@ -21,6 +21,8 @@
     <script src="/assets/scripts/g.js?v=1"></script>
   </head>
   <body>
+      <div class="space">
+    <div class="stars"></div>
            <div id="particles-js">
       <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <a href="/" target="_blank" style="text-decoration: none;color:white;">Go Back</p>
