--- a/static/Bypasser.html
+++ b/static/Bypasser.html
@@ -7,7 +7,9 @@
 </style>
 </head>
 <body>
-Website: <input type="url" id="myURL" value="" onkeydown = "if (event.keyCode == 13) document.getElementById('analyze').click()">
+BL0XXED LITE
+<br>
+Search Website: <input type="url" id="myURL" value="" onkeydown = "if (event.keyCode == 13) document.getElementById('analyze').click()">
 <button id="analyze" onclick="download()">analyze</button> 
 <a id="abc"></a> 
 <button id="analyze1" onclick="download1()">adv_analyze</button> 
