--- a/static/BookMarklets.html
+++ b/static/BookMarklets.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" id="dynamic-favicon" href="favicon.png" />
+    <script src="/assets/scripts/home.js"></script>
     <title id="dynamic-title">BOOKMARKS</title>
     <link rel="stylesheet" href="/assets/styles/main.css" />
     <link rel="stylesheet" href="/assets/styles/home.css" />
