--- a/static/index.html
+++ b/static/index.html
@@ -25,15 +25,16 @@
          <div class="space">
     <div class="stars"></div>
       <div class="main">
-        <h1 class="title">👑BL▢XXED👑</h1>
+        <h1 class="title">Welcome...</h1>
+        <a href="" target="_blank" style="text-decoration: none;color:green;">Input Designated Website ABOVE</p>
         <div class="search-container">
           <form method="POST">
             <input class="main-search" placeholder="Search" type="text" />
         <br>
             <br>
-            <a href="settings.html" target="_blank" style="text-decoration: none;color:white;">⚙Settings⚙</p>
+            
               <br>
-          <a href="games.html" target="_blank" style="text-decoration: none;color:white;">🕹️Games🕹️</p>
+          <a href="games.html" target="_blank" style="text-decoration: none;color:white;"> (This is a private project.) </p>
           </form>
           </div>
         </div>
