--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
     <div class="stars"></div>
       <div class="main">
         <h1 class="title">Welcome...</h1>
-        <a href="" target="_blank" style="text-decoration: none;color:green;">Input Designated Website ABOVE</p>
+        <a target="_blank" style="text-decoration: none;color:green;">Input Designated Website BELOW</p>
         <div class="search-container">
           <form method="POST">
             <input class="main-search" placeholder="Search" type="text" />
@@ -34,7 +34,7 @@
             <br>
             
               <br>
-          <a href="games.html" target="_blank" style="text-decoration: none;color:white;"> (This is a private project.) </p>
+          <a target="_blank" style="text-decoration: none;color:white;"> (This is a private project.) </p>
           </form>
           </div>
         </div>
