--- a/static/index.html
+++ b/static/index.html
@@ -29,10 +29,10 @@
         <a target="_blank" style="text-decoration: none;color:green;">Input Designated Website BELOW</p>
         <div class="search-container">
           <form method="POST">
-            <input class="main-search" placeholder="Search" type="text" />
+            <input class="main-search" placeholder="www.website.website" type="text" />
         <br>
+          <br>
             <br>
-            
               <br>
           <a target="_blank" style="text-decoration: none;color:white;"> (This is a private project.) </p>
           </form>
