--- a/static/go.html
+++ b/static/go.html
@@ -63,7 +63,9 @@
       height="100%"
       width="100%"
       allowfullscreen></iframe>
-
+    <button onclick="reload()" class="navbtn navbtn1">
+      <i class="fa-solid fa-rotate-right"></i>
+    </button>
     <button id="home-page" class="navbtn navbtn2" onclick="reload()">
       <i class="fa-solid fa-house"></i>
     </button>
